# Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  backend.py  call.txt  code  config.txt  frontend.py  instructions.md  maze.txt  maze_gen.py  mazegen-1.0.0-py3-none-any.whl  parser.py  pyproject.toml
env/: pyvenv.cfg
